--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -30,7 +30,7 @@ clone.Append(LIBS = ['loos'])
 apps = 'density-dist density-dist-windowed center-pdb model2matlab frame2pdb contacts order_params bounding aligner svd rmsds xy_rdf xy_rdf_timeseries model-select rdf atomic-rdf crossing-waters'
 apps = apps + ' svdcolmap averager convert2pdb traj2dcd reimage-by-molecule rmsd2ref rgyr dumpmol helix_kink subsetter torsion'
 apps = apps + ' dcdinfo recenter-trj concat-selection trajinfo rmsf interdist paxes rmsfit rotamer'
-apps = apps + ' drifter porcupine ramachandran renum-pdb exposure clipper'
+apps = apps + ' drifter porcupine ramachandran renum-pdb exposure clipper rebond'
 
 list = []
 
