--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -111,7 +111,7 @@ if env.has_key('LD_LIBRARY_PATH'):
 non_testable_tests = 'timeseries-test find_perf_test ccpdb_test pdbtraj_test tinker_arc_test'
 pdb_based_tests = 'pdb-tests alignment-tests parser-tests pdb-echo'
 tinker_tests = 'tinkerxyz-tests'
-solo_tests = 'principal-axes-tests atomic-group-test timeseries-test matrix_test'
+solo_tests = 'principal-axes-tests atomic-group-test timeseries-test matrix_test hybrid36'
 
 # This is the master list of dependencies to pass to our caller...
 list = []
