--- a/Tools/ElasticNetworks/SConscript
+++ b/Tools/ElasticNetworks/SConscript
@@ -27,7 +27,7 @@ Import('env')
 clone = env.Clone()
 clone.Append(LIBS = ['loos'])
 
-apps = 'anm gnm enmovie flucc2b'
+apps = 'anm gnm enmovie flucc2b vsa'
 
 list = []
 
