Added tool to extract massses from a PSF and map them onto the occupancy field of a PDB
svn path=/software/LOOS/trunk/; revision=3215

--- a/Tools/ElasticNetworks/SConscript
+++ b/Tools/ElasticNetworks/SConscript
@@ -27,7 +27,7 @@ Import('env')
 clone = env.Clone()
 clone.Append(LIBS = ['loos'])
 
-apps = 'anm gnm enmovie flucc2b vsa'
+apps = 'anm gnm enmovie flucc2b vsa psf-masses'
 
 list = []
 
