Corrected library link order...
svn path=/software/LOOS/trunk/; revision=3935

--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -21,7 +21,7 @@
 
 Import('env')
 clone = env.Clone()
-clone.Append(LIBS = ['loos'])
+clone.Prepend(LIBS = ['loos'])
 
 
 ### Major uglage ensues...  Close your eyes if you're squeamish...
