Added more generic tool to compute B-factors from ENM results
svn path=/software/LOOS/trunk/; revision=4473

--- a/Tools/ElasticNetworks/SConscript
+++ b/Tools/ElasticNetworks/SConscript
@@ -27,7 +27,7 @@ Import('env')
 clone = env.Clone()
 clone.Prepend(LIBS = ['loos'])
 
-apps = 'gnm enmovie flucc2b psf-masses heavy-ca'
+apps = 'gnm enmovie flucc2b psf-masses heavy-ca eigenflucc'
 install_apps = apps + ' vsa anm'
 
 list = []
