Added default constants for spring functions. Added spring_functions.cpp to hold non-interface code. Added skeleton factory function Added copyrights
svn path=/software/LOOS/branches/ENM-Devel/; revision=4599

--- a/Tools/ElasticNetworks/SConscript
+++ b/Tools/ElasticNetworks/SConscript
@@ -42,10 +42,10 @@ PREFIX = env['PREFIX']
 
 # Special apps...
 
-vsa = clone.Program("vsa", ["vsa.cpp", "hessian.cpp"])
+vsa = clone.Program("vsa", ["vsa.cpp", "hessian.cpp", "spring_functions.cpp"])
 list.append(vsa)
 
-anm = clone.Program("anm", ["anm.cpp", "hessian.cpp"])
+anm = clone.Program("anm", ["anm.cpp", "hessian.cpp", "spring_functions.cpp"])
 list.append(anm)
 
 
