Added separate vsa-lib.cpp in build
svn path=/software/LOOS/branches/ENM-Devel/; revision=4618

--- a/Tools/ElasticNetworks/SConscript
+++ b/Tools/ElasticNetworks/SConscript
@@ -42,7 +42,7 @@ PREFIX = env['PREFIX']
 
 # Special apps...
 
-vsa = clone.Program("vsa", ["vsa.cpp", "hessian.cpp", "spring_functions.cpp", "enm-lib.cpp"])
+vsa = clone.Program("vsa", ["vsa.cpp", "hessian.cpp", "spring_functions.cpp", "enm-lib.cpp", "vsa-lib.cpp"])
 list.append(vsa)
 
 anm = clone.Program("anm", ["anm.cpp", "hessian.cpp", "spring_functions.cpp", "enm-lib.cpp"])
