--- a/Tools/ElasticNetworks/SConscript
+++ b/Tools/ElasticNetworks/SConscript
@@ -48,6 +48,9 @@ list.append(vsa)
 anm = clone.Program("anm", ["anm.cpp", "hessian.cpp", "spring_functions.cpp", "enm-lib.cpp"])
 list.append(anm)
 
+quickie = clone.Program("quickie", ["quickie.cpp", "hessian.cpp", "spring_functions.cpp", "enm-lib.cpp", "vsa-lib.cpp"])
+list.append(quickie)
+
 nickanm = clone.Program("nickanm", ["nickanm.cpp", "hessian.cpp", "spring_functions.cpp", "enm-lib.cpp"])
 list.append(nickanm)
 
