Added the block averaging standalone tool.
WARNING: at the moment, it gives a slightly different answer from the PYTHON
one, and I don't know which one is correct.  I have to debug before the 
release.

svn path=/software/LOOS/trunk/; revision=4889

--- a/Tools/Convergence/SConscript
+++ b/Tools/Convergence/SConscript
@@ -50,7 +50,9 @@ decorr_time = clone.Program('decorr_time', ['decorr_time.cpp', fidlib])
 hierarchy = clone.Program('hierarchy.cpp')
 neff = clone.Program('neff.cpp')
 
-list = [ bcom, boot_bcom, fidpick, sortfids, ufidpick, decorr_time, hierarchy, neff ]
+block_average = clone.Program('block_average.cpp')
+
+list = [ bcom, boot_bcom, fidpick, sortfids, ufidpick, decorr_time, hierarchy, neff, block_average ]
 
 install_apps = list + Split(scripts)
 
