--- a/Tools/Convergence/SConscript
+++ b/Tools/Convergence/SConscript
@@ -55,8 +55,9 @@ block_average = clone.Program('block_average.cpp')
 avgconv = clone.Program('avgconv.cpp')
 
 boot_avgconv = clone.Program('boot_avgconv.cpp')
+block_avgconv = clone.Program('block_avgconv.cpp')
 
-list = [ bcom, boot_bcom, fidpick, sortfids, ufidpick, decorr_time, hierarchy, neff, block_average, avgconv, boot_avgconv ]
+list = [ bcom, boot_bcom, fidpick, sortfids, ufidpick, decorr_time, hierarchy, neff, block_average, avgconv, boot_avgconv, block_avgconv ]
 
 install_apps = list + Split(scripts)
 
