--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -32,7 +32,7 @@ apps = apps + ' svdcolmap averager convert2pdb traj2dcd reimage-by-molecule rmsd
 apps = apps + ' dcdinfo recenter-trj concat-selection trajinfo rmsf interdist paxes rmsfit rotamer'
 apps = apps + ' drifter porcupine ramachandran renum-pdb exposure clipper rebond molshape native_contacts traj2matlab'
 apps = apps + ' alignto traj2pdb merge-traj center-molecule contact-time perturb-structure coverlap phase-pdb'
-apps = apps + ' big-svd kurskew'
+apps = apps + ' big-svd kurskew periodic_box'
 
 list = []
 
