--- a/Tools/Convergence/SConscript
+++ b/Tools/Convergence/SConscript
@@ -42,11 +42,11 @@ boot_bcom = clone.Program('boot_bcom', ['boot_bcom.cpp', bcomlib])
 
 fidlib = clone.Object('fid-lib.cpp')
 
-fidpick = clone.Program('fidpick.cpp')
+#fidpick = clone.Program('fidpick.cpp')
 ufidpick = clone.Program('ufidpick', ['ufidpick.cpp', fidlib])
-sortfids = clone.Program('sortfids.cpp')
+#sortfids = clone.Program('sortfids.cpp')
 
-decorr_time = clone.Program('decorr_time', ['decorr_time.cpp', fidlib])
+#decorr_time = clone.Program('decorr_time', ['decorr_time.cpp', fidlib])
 
 hierarchy = clone.Program('hierarchy.cpp')
 neff = clone.Program('neff.cpp')
@@ -58,7 +58,8 @@ avgconv = clone.Program('avgconv.cpp')
 boot_avgconv = clone.Program('boot_avgconv.cpp')
 block_avgconv = clone.Program('block_avgconv.cpp')
 
-list = [ bcom, bcomz, boot_bcom, fidpick, sortfids, ufidpick, decorr_time, hierarchy, neff, block_average, avgconv, boot_avgconv, block_avgconv ]
+#list = [ bcom, bcomz, boot_bcom, fidpick, sortfids, ufidpick, decorr_time, hierarchy, neff, block_average, avgconv, boot_avgconv, block_avgconv ]
+list = [ bcom, bcomz, boot_bcom, ufidpick, hierarchy, neff, block_average, avgconv, boot_avgconv, block_avgconv ]
 
 install_apps = list + Split(scripts)
 
