--- a/Tools/Convergence/SConscript
+++ b/Tools/Convergence/SConscript
@@ -56,10 +56,9 @@ block_average = clone.Program('block_average.cpp')
 
 avgconv = clone.Program('avgconv.cpp')
 
-boot_avgconv = clone.Program('boot_avgconv.cpp')
 block_avgconv = clone.Program('block_avgconv.cpp')
 
-list = [ bcom, bcomz, boot_bcom, fidpick, sortfids, ufidpick, assign_frames, decorr_time, hierarchy, neff, block_average, avgconv, boot_avgconv, block_avgconv ]
+list = [ bcom, bcomz, boot_bcom, fidpick, sortfids, ufidpick, assign_frames, decorr_time, hierarchy, neff, block_average, avgconv, block_avgconv ]
 
 install_apps = list + Split(scripts)
 
