--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -26,45 +26,46 @@ Import('env')
 clone = env.Clone()
 clone.Prepend(LIBS = ['loos'])
 
-PREFIX = env['PREFIX']
-
 # Scripts
 
-scripts = 'bootstrap_overlap.pl decorr_plot.sh effsize.pl'
+scripts = 'bootstrap_overlap.pl effsize.pl'
 
 # Stand-alone apps...
 
-bcomlib = clone.Object('bcomlib.cpp')
+list = []
+apps = 'fidpick sortfids hierarchy neff block_average avgconv block_avgconv'
 
-bcom = clone.Program('bcom', ['bcom.cpp', bcomlib])
-boot_bcom = clone.Program('boot_bcom', ['boot_bcom.cpp', bcomlib])
-
-fidlib = clone.Object('fid-lib.cpp')
-
-fidpick = clone.Program('fidpick.cpp')
-ufidpick = clone.Program('ufidpick', ['ufidpick.cpp', fidlib])
-sortfids = clone.Program('sortfids.cpp')
-assign_frames = clone.Program('assign_frames', ['assign_frames.cpp', fidlib])
-
-decorr_time = clone.Program('decorr_time', ['decorr_time.cpp', fidlib])
-
-hierarchy = clone.Program('hierarchy.cpp')
-neff = clone.Program('neff.cpp')
-
-block_average = clone.Program('block_average.cpp')
-
-avgconv = clone.Program('avgconv.cpp')
-
-block_avgconv = clone.Program('block_avgconv.cpp')
-
-list = [ bcom, boot_bcom, fidpick, sortfids, ufidpick, assign_frames, decorr_time, hierarchy, neff, block_average, avgconv, block_avgconv ]
-scripts = [ 'bootstrap_overlap.pl', 'effsize.pl' ]
-
-install_apps = list + Split(scripts)
+for name in Split(apps):
+    fname = name + '.cpp'
+    prog = clone.Program(fname)
+    list.append(prog)
 
 
-conv_tools = env.Install(PREFIX + '/bin', Split(install_apps))
-env.Alias('conv_tools_install', conv_tools)
+### Library generation
+# Be sure to add new modules/headers here!!!
+library_sources = 'bcomlib.cpp fid-lib.cpp'
+library_headers = 'bcomlib.hpp fid-lib.hpp'
+
+loos_convergence = clone.Library('loos_convergence', Split(library_sources))
+clone.Prepend(LIBS=['loos_convergence'])
+clone.Prepend(LIBPATH=['#/Packages/Convergence'])
+
+
+# Tools requiring the above library
+dependent = 'bcom boot_bcom ufidpick assign_frames decorr_time'
+for name in Split(apps):
+    fname = name + '.cpp'
+    prog = clone.Program(fname)
+    list.append(prog)
+
+
+### Installation specific
+
+PREFIX = env['PREFIX']
+
+
+conv_tools = env.Install(PREFIX + '/bin', list + Split(scripts))
+env.Alias('convergence_package', conv_tools)
 
 
 Return('list')
