Rewritten for the new LOOS...
svn path=/software/LOOS/branches/Reorganization-2011/; revision=5705

--- a/Packages/DensityTools/SConscript
+++ b/Packages/DensityTools/SConscript
@@ -37,7 +37,7 @@ clone.Prepend(LIBPATH=['#/Packages/DensityTools'])
 clone.Prepend(CPPPATH='#/Packages/DensityTools')
 
 
-apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid contained gridstat peakify pick_blob blob_stats water-inside'
+apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid contained gridstat peakify pick_blob blob_stats water-inside water-extract'
 
 list = []
 
