--- a/Packages/DensityTools/SConscript
+++ b/Packages/DensityTools/SConscript
@@ -38,6 +38,7 @@ clone.Prepend(CPPPATH='#/Packages/DensityTools')
 
 
 apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid contained gridstat peakify pick_blob blob_stats water-inside water-extract'
+apps += ' water-hist'
 
 list = []
 
