Reorganizational changes associated with moving OptionsFramework into core loos.  Package-level options should insert themselves into the loos::OptionsFramework namespace.  (I'm not entirely convinced this is a good idea, but it makes some sense otherwise tools will have a mix of, 	loos::OptionsFramework::core_loos_options 	loos::SomePackage::OptionsFramework::package_specific_options
or perhaps just,
	loos::OptionsFramework::core_loos_options
   	loos::SomePackage::package_specific_options

In any case, this is not a difficult change to make (at this point)
should we decide to go the other way.



svn path=/software/LOOS/branches/Reorganization-2011/; revision=5878

--- a/Packages/DensityTools/SConscript
+++ b/Packages/DensityTools/SConscript
@@ -28,8 +28,8 @@ clone = env.Clone()
 clone.Prepend(LIBS = ['loos'])
 
 ### Library Generation
-library_sources = 'GridUtils.cpp internal-water-filter.cpp water-hist-lib.cpp water-lib.cpp OptionsFramework.cpp'
-library_headers = 'DensityGrid.hpp GridUtils.hpp internal-water-filter.hpp water-hist-lib.hpp water-lib.hpp OptionsFramework.hpp DensityOptions.hpp'
+library_sources = 'GridUtils.cpp internal-water-filter.cpp water-hist-lib.cpp water-lib.cpp'
+library_headers = 'DensityGrid.hpp GridUtils.hpp internal-water-filter.hpp water-hist-lib.hpp water-lib.hpp DensityOptions.hpp'
 
 density_lib = clone.Library('loos_density', Split(library_sources))
 clone.Prepend(LIBS=['loos_density'])
