--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -31,7 +31,7 @@ apps = 'density-dist density-dist-windowed center-pdb model2matlab frame2pdb con
 apps = apps + ' svdcolmap averager convert2pdb traj2dcd reimage-by-molecule rmsd2ref rgyr dumpmol helix_kink subsetter torsion'
 apps = apps + ' dcdinfo recenter-trj concat-selection trajinfo rmsf interdist paxes rmsfit rotamer'
 apps = apps + ' drifter porcupine ramachandran renum-pdb exposure clipper rebond molshape native_contacts traj2matlab'
-apps = apps + ' alignto traj2pdb merge-traj center-molecule contact-time perturb-structure coverlap phase-pdb'
+apps = apps + ' traj2pdb merge-traj center-molecule contact-time perturb-structure coverlap phase-pdb'
 apps = apps + ' big-svd kurskew periodic_box area_per_lipid'
 
 list = []
